# UntitledVulkanGameEngineOld

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  autosetup.bat  autosetup.sh  autosetupci.sh  autosetupmsys.bat  clean.sh  create-project.sh  export.sh  install.sh  update-engine.sh  uvproj.yaml
Engine/: CMakeLists.txt  Engine.hpp  FallbackLayout.ini  build.sh  configure.sh
Engine/Audio/: Audio.cpp  Audio.hpp  Audio2D.cpp  Audio2D.hpp  Audio3D.cpp  Audio3D.hpp  AudioCore.hpp  AudioRenderer.cpp  AudioRenderer.hpp  AudioSource.hpp
Engine/Audio/2D/: Audio2D.cpp  Audio2D.hpp
Engine/Audio/AudioRenderer/: AudioRenderer.cpp  AudioRenderer.h
Engine/Audio/Components/: AudioCore.hpp  AudioManager.cpp  AudioManager.hpp  RegularAudio.cpp  RegularAudio.hpp  StreamedAudio.cpp  StreamedAudio.hpp
Engine/Core/: Core.cpp  Core.hpp  Defines.hpp  Registry.hpp  Types.hpp  Utility.hpp
Engine/Core/API/: Defines.h  Entity.hpp  Types.hpp
Engine/Core/Assets/: Asset.hpp  AssetManager.cpp  AssetManager.hpp
Engine/Core/Core/: Actor.cpp  Actor.hpp  Defines.hpp  ECS.cpp  ECS.hpp  Global.cpp  Global.hpp  Interfaces.hpp  Registry.cpp  Registry.hpp  STL.cpp  STL.hpp  State.hpp  Types.hpp  UUID.cpp  UUID.hpp  Utility.cpp  Utility.hpp
Engine/Core/Core/Interfaces/: ECSInterface.cpp  ECSInterface.hpp  EditorModuleInterface.cpp  EditorModuleInterface.hpp  GameInstanceInterface.cpp  GameInstanceInterface.hpp  InputInterface.cpp  InputInterface.hpp  RendererInterface.cpp  RendererInterface.hpp  SettingsManager.cpp  SettingsManager.hpp  UInterface.cpp  UInterface.hpp  WindowInterface.cpp  WindowInterface.hpp
Engine/Core/Events/: Events.cpp  Events.hpp
Engine/Core/Events/Input/: InputSystem.hpp  Keys.hpp
Engine/Core/GameFramework/: Components.hpp  NameComponent.h
Engine/Core/GameFramework/Actors/: Actor.cpp  Actor.hpp  Character.cpp  Character.hpp  Pawn.cpp  Pawn.hpp
Engine/Core/GameFramework/GameFoundation/: GameInstance.cpp  GameInstance.hpp  GameMode.cpp  GameMode.hpp  GameState.hpp  Level.cpp  Level.hpp  PlayerController.cpp  PlayerController.hpp  PlayerState.cpp  PlayerState.hpp
Engine/Core/Locale/: Locale.cpp  Locale.hpp  LocaleConstants.hpp
Engine/Core/State/: StateTracker.cpp  StateTracker.hpp
Engine/Editor/: DetailsPanel.hpp  Statistics.hpp
Engine/GameFramework/Actors/: AActor.hpp  APawn.cpp  APawn.hpp  ActorManager.cpp  ActorManager.hpp  FallbackPawn.cpp  FallbackPawn.hpp  Pawn.cpp  Pawn.hpp  ScriptableObject.hpp
Engine/GameFramework/Actors/GenericActors/: GenericActor.cpp  GenericActor.hpp
Engine/GameFramework/Components/: Components.hpp
Engine/GameFramework/Components/Components/: AudioComponent.cpp  AudioComponent.hpp  CoreComponent.cpp  CoreComponent.hpp  MeshComponent.cpp  MeshComponent.hpp  MeshComponentRaw.cpp  MeshComponentRaw.hpp  PointLightComponent.cpp  PointLightComponent.hpp
Engine/GameFramework/GameplayClasses/: GameInstance.cpp  GameInstance.hpp  GameMode.cpp  GameMode.hpp  GameState.cpp  GameState.hpp  PlayerController.cpp  PlayerController.hpp  PlayerState.cpp  PlayerState.hpp
Engine/GameFramework/GameplayClasses/Level/: Level.cpp  Level.hpp
Engine/Renderer/: Renderer.cpp  Renderer.hpp  RendererCore.hpp  RendererResources.hpp
Engine/Renderer/Camera/: Camera.cpp  Camera.hpp  Projection.cpp  Projection.hpp
Engine/Renderer/EditorUI/: DetailsPanel.hpp  Editor.cpp  Editor.hpp  Filesystem.hpp  SaveLevel.hpp  Statistics.hpp  WorldSettings.hpp
Engine/Renderer/EditorUI/Classes/: EditorGameMode.cpp  EditorGameMode.hpp  EditorLevel.cpp  EditorLevel.hpp  EditorPawn.cpp  EditorPawn.hpp  EditorPlayerController.cpp  EditorPlayerController.hpp
Engine/Renderer/EditorUI/EditorUtils/: GUI.cpp  GUI.hpp  Resources.cpp  Resources.hpp  Settings.cpp  Settings.hpp  Structs.cpp  Structs.hpp
Engine/Renderer/EditorUI/Modules/: EditorModule.cpp  EditorModule.hpp
Engine/Renderer/EditorUI/Style/: Layout.cpp  Layout.hpp  Theme.cpp  Theme.hpp
Engine/Renderer/EditorUI/Widgets/: About.cpp  About.hpp  AssetSlot.cpp  AssetSlot.hpp  CreateFile.cpp  CreateFile.hpp  DetailsPanel.cpp  DetailsPanel.hpp  EditorViewport.cpp  EditorViewport.hpp  Filesystem.cpp  Filesystem.hpp  Help.cpp  Help.hpp  MemoryEditor.cpp  MemoryEditor.hpp  NewLevel.cpp  NewLevel.hpp  OpenLevelWidget.cpp  OpenLevelWidget.hpp  RemoveFile.cpp  RemoveFile.hpp  SaveLevel.cpp  SaveLevel.hpp  SceneHierarchy.cpp  SceneHierarchy.hpp  Settings.cpp  Settings.hpp  Ship.cpp  Ship.hpp  Statistics.cpp  Statistics.hpp  TerminalEmulator.cpp  TerminalEmulator.hpp  Tools.cpp  Tools.hpp  TopToolbar.cpp  TopToolbar.hpp  Warnings.cpp  Warnings.hpp  (+2 more)
Engine/Renderer/OpenGL/: GLCamera.cpp  GLCamera.hpp  GLMesh.cpp  GLMesh.hpp  GLRenderer.cpp  GLRenderer.hpp  GLShader.cpp  GLShader.hpp  GLWindow.cpp  GLWindow.h
Engine/Renderer/OpenGL/Components/: GLCamera.cpp  GLCamera.hpp  GLFrameBuffer.cpp  GLFrameBuffer.hpp  GLMesh.cpp  GLMesh.hpp  GLShader.cpp  GLShader.hpp  GLUniformBuffer.cpp  GLUniformBuffer.hpp
Engine/Renderer/OpenGL/Pipeline/: GLEntityManager.cpp  GLEntityManager.hpp  GLPipeline.cpp  GLPipeline.hpp
Engine/Renderer/Textures/: Texture.cpp  Texture.hpp
Engine/Renderer/UI/: UI.cpp  UI.hpp
Engine/Renderer/Utils/: RendererUtils.cpp  RendererUtils.hpp
Engine/Renderer/Vulkan/: VKEntityManager.cpp  VKEntityManager.hpp  VkRenderer.cpp  VkRenderer.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp
Engine/Renderer/Vulkan/Components/: Buffer.cpp  Buffer.hpp  Commands.cpp  Commands.hpp  Depth.cpp  Depth.hpp  Descriptors.cpp  Descriptors.hpp  Device.cpp  Device.hpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp  Instance.cpp  Instance.hpp  Resources.cpp  Resources.hpp  Swapchain.cpp  Swapchain.hpp  Utility.cpp  Utility.hpp  VKBuffer.cpp  VKBuffer.hpp  VKCamera.cpp  VKCamera.hpp  VKCommandBuffer.cpp  VKCommandBuffer.hpp  VKDescriptorSets.cpp  VKDescriptorSets.hpp  VKFramebuffer.cpp  VKFramebuffer.hpp  VKMesh.cpp  VKMesh.hpp  VKShader.cpp  VKShader.hpp  VKStructs.hpp
Engine/Renderer/Vulkan/Pipeline/: VKCommandBuffers.cpp  VKCommandBuffers.hpp  (+18 more)
Engine/Renderer/Window/: Window.cpp  Window.hpp
(+104 files in other folders)
